@@ -1,3 +1,13 @@
+2006-12-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf-bfd.h (struct elf_backend_data): Add as_needed_cleanup hook.
+	* elfxx-target.h (elf_backend_as_needed_cleanup): Define.
+	(elfNN_bed): Add as_needed_cleanup hook.
+	* elflink.c (elf_link_add_object_symbols): Call it when reverting
+	hash table changes for unneeded --as-needed input.
+	* elf64-ppc64.c (elf_backend_as_needed_cleanup): Define.
+	(ppc64_elf_as_needed_cleanup): New function.
+
 2006-12-19  Kazu Hirata  <kazu@codesourcery.com>
 
 	* elf32-m68k.c (elf32_m68k_object_p,
